--- a/app/src/main/res/layout/map_fragment.xml
+++ b/app/src/main/res/layout/map_fragment.xml
@@ -1,4 +1,5 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/relativeLayout"
     android:layout_width="match_parent"
@@ -27,5 +28,15 @@
         android:layout_margin="@dimen/activity_medium_margin"
         android:background="@drawable/border_gray_1"
         android:padding="@dimen/activity_mid_padding" />
+
+    <ImageView
+        android:id="@+id/imageViewRefresh"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/textView"
+        android:layout_margin="@dimen/activity_medium_margin"
+        android:src="@android:drawable/ic_popup_sync"
+        app:srcCompat="@android:drawable/ic_popup_sync"
+        tools:ignore="ContentDescription" />
 
 </RelativeLayout>
