--- a/app/src/main/res/layout/document_activity1.xml
+++ b/app/src/main/res/layout/document_activity1.xml
@@ -15,126 +15,18 @@
         android:weightSum="3"
         tools:ignore="ScrollViewSize">
 
-        <LinearLayout
+        <TextView
             android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:layout_gravity="center"
-            android:layout_marginBottom="@dimen/activity_mid_margin"
-            android:layout_weight="1"
-            android:background="@drawable/border_gray_1"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/image_view"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_margin="@dimen/activity_mid_margin"
-                android:layout_weight="1"
-                android:src="@drawable/icon_finder_camera"
-                tools:ignore="ContentDescription,NestedWeights" />
-
-            <Spinner
-                android:id="@+id/spinnerTitle"
-                style="@style/Widget.AppCompat.Spinner.DropDown"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginLeft="@dimen/activity_large_margin"
-                android:layout_marginTop="@dimen/activity_mid_margin"
-                android:layout_marginRight="@dimen/activity_large_margin"
-                android:layout_marginBottom="@dimen/activity_mid_margin"
-                android:paddingLeft="@dimen/activity_large_padding"
-                android:paddingRight="@dimen/activity_large_padding" />
-
-            <Button
-                android:id="@+id/button_pick"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginLeft="@dimen/activity_large_margin"
-                android:layout_marginTop="@dimen/activity_mid_margin"
-                android:layout_marginRight="@dimen/activity_large_margin"
-                android:layout_marginBottom="@dimen/activity_mid_margin"
-                android:background="@drawable/border_blue_1"
-                android:paddingLeft="@dimen/activity_large_padding"
-                android:paddingRight="@dimen/activity_large_padding"
-                android:text="@string/pick_an_image"
-                android:textColor="@color/white"
-                android:textSize="@dimen/textSizeMedium"
-                tools:ignore="MissingConstraints" />
-
-            <Button
-                android:id="@+id/button_upload"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginLeft="@dimen/activity_large_margin"
-                android:layout_marginTop="@dimen/activity_mid_margin"
-                android:layout_marginRight="@dimen/activity_large_margin"
-                android:layout_marginBottom="@dimen/activity_mid_margin"
-                android:background="@drawable/border_green_2"
-                android:text="@string/upload"
-                android:textColor="@color/white"
-                android:textSize="@dimen/textSizeMedium"
-                android:visibility="gone"
-                tools:ignore="MissingConstraints" />
-        </LinearLayout>
-
-        <!--        <LinearLayout-->
-        <!--            android:id="@+id/linearLayoutUploadMap"-->
-        <!--            android:layout_width="match_parent"-->
-        <!--            android:layout_height="wrap_content"-->
-        <!--            android:layout_marginBottom="@dimen/activity_mid_margin"-->
-        <!--            android:background="@drawable/border_gray_1"-->
-        <!--            android:orientation="vertical">-->
-
-        <!--            <ImageView-->
-        <!--                android:id="@+id/imageViewMap"-->
-        <!--                android:layout_width="match_parent"-->
-        <!--                android:layout_height="@dimen/_100sdp"-->
-        <!--                android:layout_margin="@dimen/activity_large_margin"-->
-        <!--                tools:ignore="ContentDescription" />-->
-
-        <!--            <Spinner-->
-        <!--                android:id="@+id/spinnerMapTitle"-->
-        <!--                style="@style/Widget.AppCompat.Spinner.DropDown"-->
-        <!--                android:layout_width="wrap_content"-->
-        <!--                android:layout_height="wrap_content"-->
-        <!--                android:layout_gravity="center"-->
-        <!--                android:layout_marginLeft="@dimen/activity_large_margin"-->
-        <!--                android:layout_marginTop="@dimen/activity_mid_margin"-->
-        <!--                android:layout_marginRight="@dimen/activity_large_margin"-->
-        <!--                android:layout_marginBottom="@dimen/activity_mid_margin"-->
-        <!--                android:paddingLeft="@dimen/activity_large_padding"-->
-        <!--                android:paddingRight="@dimen/activity_large_padding" />-->
-
-        <!--            <Button-->
-        <!--                android:id="@+id/buttonUploadMap"-->
-        <!--                android:layout_width="wrap_content"-->
-        <!--                android:layout_height="wrap_content"-->
-        <!--                android:layout_gravity="center"-->
-        <!--                android:layout_marginLeft="@dimen/activity_large_margin"-->
-        <!--                android:layout_marginTop="@dimen/activity_mid_margin"-->
-        <!--                android:layout_marginRight="@dimen/activity_large_margin"-->
-        <!--                android:layout_marginBottom="@dimen/activity_mid_margin"-->
-        <!--                android:background="@drawable/border_blue_1"-->
-        <!--                android:gravity="center"-->
-        <!--                android:paddingLeft="@dimen/activity_large_padding"-->
-        <!--                android:paddingRight="@dimen/activity_large_padding"-->
-        <!--                android:text="@string/upload"-->
-        <!--                android:textColor="@color/white"-->
-        <!--                android:textSize="@dimen/textSizeMedium"-->
-        <!--                tools:ignore="MissingConstraints" />-->
-
-
-        <!--        </LinearLayout>-->
+            android:layout_height="wrap_content"
+            android:padding="@dimen/activity_medium_padding"
+            android:text="@string/document_received"
+            android:textSize="@dimen/textSizeMedium" />
 
         <GridView
             android:id="@+id/gridViewImage"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:layout_gravity="center"
-            android:layout_marginTop="@dimen/activity_mid_margin"
             android:layout_weight="2"
             android:background="@drawable/border_gray_1"
             android:gravity="center"
@@ -142,5 +34,100 @@
             android:numColumns="2"
             tools:ignore="NestedScrolling,ScrollViewSize,UnusedAttribute"
             tools:listitem="@layout/item_image" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/activity_medium_padding"
+            android:text="@string/to_continue"
+            android:textSize="@dimen/textSizeMedium" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:background="@drawable/border_gray_2"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/image_view"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_margin="@dimen/activity_mid_margin"
+                android:layout_weight="1"
+                android:src="@drawable/icon_finder_camera"
+                tools:ignore="ContentDescription,NestedWeights" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginLeft="@dimen/activity_large_margin"
+                android:layout_marginRight="@dimen/activity_large_margin"
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:background="@drawable/border_white_1"
+                    android:orientation="vertical"
+                    android:padding="@dimen/activity_mid_padding">
+
+                    <Button
+                        android:id="@+id/button_pick"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginBottom="@dimen/activity_mid_margin"
+                        android:background="@drawable/border_blue_1"
+                        android:paddingLeft="@dimen/activity_large_padding"
+                        android:paddingRight="@dimen/activity_large_padding"
+                        android:text="@string/pick_an_image"
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/textSizeMedium"
+                        tools:ignore="MissingConstraints" />
+
+                    <Spinner
+                        android:id="@+id/spinnerTitle"
+                        style="@style/Widget.AppCompat.Spinner.DropDown"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="@dimen/activity_mid_margin"
+                        android:layout_marginBottom="@dimen/activity_mid_margin"
+                        android:paddingLeft="@dimen/activity_large_padding"
+                        android:paddingRight="@dimen/activity_large_padding" />
+
+                    <Button
+                        android:id="@+id/button_upload"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="@dimen/activity_mid_margin"
+                        android:background="@drawable/border_green_2"
+                        android:text="@string/upload_image"
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/textSizeMedium"
+                        android:visibility="gone"
+                        tools:ignore="MissingConstraints" />
+                </LinearLayout>
+
+                <Button
+                    android:id="@+id/button_accepted"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="@dimen/activity_mid_margin"
+                    android:layout_marginBottom="@dimen/activity_mid_margin"
+                    android:background="@drawable/border_orange_2"
+                    android:text="@string/final_accepted"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/textSizeMedium"
+                    tools:ignore="MissingConstraints" />
+            </LinearLayout>
+        </LinearLayout>
+
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
