--- a/app/src/main/res/layout/form_activity1.xml
+++ b/app/src/main/res/layout/form_activity1.xml
@@ -22,6 +22,8 @@
         android:layout_alignParentBottom="true"
         android:layout_margin="@dimen/activity_mid_padding"
         android:background="@drawable/border_red_2"
+        android:paddingLeft="@dimen/activity_medium_padding"
+        android:paddingRight="@dimen/activity_medium_padding"
         android:text="@string/previous"
         android:textColor="@color/white"
         android:textSize="@dimen/textSizeLarge"
@@ -35,6 +37,8 @@
         android:layout_alignParentBottom="true"
         android:layout_margin="@dimen/activity_mid_padding"
         android:background="@drawable/border_green_2"
+        android:paddingLeft="@dimen/activity_medium_padding"
+        android:paddingRight="@dimen/activity_medium_padding"
         android:text="@string/next"
         android:textColor="@color/white"
         android:textSize="@dimen/textSizeLarge"
