--- a/app/src/main/res/layout/document_activity1.xml
+++ b/app/src/main/res/layout/document_activity1.xml
@@ -95,6 +95,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
+                        android:spinnerMode="dialog"
                         android:layout_marginTop="@dimen/activity_mid_margin"
                         android:layout_marginBottom="@dimen/activity_mid_margin"
                         android:paddingLeft="@dimen/activity_large_padding"
