--- a/app/src/main/res/layout/dropdown_menu_popup_item.xml
+++ b/app/src/main/res/layout/dropdown_menu_popup_item.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+<CheckedTextView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@android:id/text1"
+    style="?android:attr/spinnerDropDownItemStyle"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:ellipsize="end"
-    android:maxLines="1"
-    android:padding="16dp"
-    android:textAppearance="?attr/textAppearanceSubtitle1" />
+    android:ellipsize="marquee"
+    android:padding="@dimen/activity_medium_padding"
+    android:singleLine="true"
+    android:textSize="@dimen/textSizeMedium" />
