--- a/app/src/main/res/layout/map_fragment.xml
+++ b/app/src/main/res/layout/map_fragment.xml
@@ -8,7 +8,7 @@
     tools:context="com.leon.estimate.fragments.MapFragment">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/textViewTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
@@ -20,11 +20,21 @@
         android:textSize="@dimen/textSizeHuge"
         android:textStyle="bold" />
 
+    <TextView
+        android:id="@+id/textViewDescription"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/textViewTitle"
+        android:layout_margin="@dimen/activity_medium_margin"
+        android:padding="@dimen/activity_medium_padding"
+        android:text="@string/map_description"
+        android:textSize="@dimen/textSizeMedium" />
+
     <org.osmdroid.views.MapView
         android:id="@+id/mapView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/textView"
+        android:layout_below="@id/textViewDescription"
         android:layout_margin="@dimen/activity_medium_margin"
         android:background="@drawable/border_gray_1"
         android:padding="@dimen/activity_mid_padding" />
@@ -33,7 +43,7 @@
         android:id="@+id/imageViewRefresh"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/textView"
+        android:layout_below="@id/textViewDescription"
         android:layout_margin="@dimen/activity_medium_margin"
         android:src="@android:drawable/ic_popup_sync"
         app:srcCompat="@android:drawable/ic_popup_sync"
