--- a/app/src/main/res/layout/map_fragment.xml
+++ b/app/src/main/res/layout/map_fragment.xml
@@ -45,8 +45,9 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/textViewDescription"
         android:layout_margin="@dimen/activity_medium_margin"
-        android:src="@android:drawable/ic_popup_sync"
-        app:srcCompat="@android:drawable/ic_popup_sync"
+        android:padding="@dimen/activity_mid_padding"
+        android:src="@drawable/refresh"
+        app:srcCompat="@drawable/refresh"
         tools:ignore="ContentDescription" />
 
 </RelativeLayout>
