--- a/app/src/main/res/layout/form_activity.xml
+++ b/app/src/main/res/layout/form_activity.xml
@@ -4,12 +4,43 @@
     android:id="@+id/relativeLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layoutDirection="rtl"
+    android:padding="@dimen/activity_mid_padding"
     tools:context="com.leon.estimate.activities.FormActivity">
 
-    <androidx.viewpager.widget.ViewPager
-        android:id="@+id/view_pager"
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/fragment"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:ignore="MissingConstraints" />
+        android:layout_height="match_parent"
+        android:layout_above="@id/buttonNext" />
 
+    <Button
+        android:id="@+id/buttonPrevious"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_margin="@dimen/activity_mid_padding"
+        android:background="@drawable/border_red_2"
+        android:paddingLeft="@dimen/activity_medium_padding"
+        android:paddingRight="@dimen/activity_medium_padding"
+        android:text="@string/previous"
+        android:textColor="@color/white"
+        android:textSize="@dimen/textSizeLarge"
+        tools:ignore="RelativeOverlap,RtlHardcoded" />
+
+    <Button
+        android:id="@+id/buttonNext"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentBottom="true"
+        android:layout_margin="@dimen/activity_mid_padding"
+        android:background="@drawable/border_green_2"
+        android:paddingLeft="@dimen/activity_medium_padding"
+        android:paddingRight="@dimen/activity_medium_padding"
+        android:text="@string/next"
+        android:textColor="@color/white"
+        android:textSize="@dimen/textSizeLarge"
+        tools:ignore="RtlHardcoded" />
 </RelativeLayout>
