--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -76,10 +76,10 @@
                     android:hint="@string/username"
                     android:inputType="text"
                     android:lines="1"
-                    android:text="appExam"
                     android:padding="@dimen/activity_medium_padding"
                     tools:ignore="Autofill" />
 
+<!--                android:text="appExam"-->
                 <!--                android:text="test_u1"-->
                 <ImageView
                     android:id="@+id/imageViewUsername"
@@ -110,9 +110,9 @@
                     android:inputType="textPassword"
                     android:lines="1"
                     android:padding="@dimen/activity_medium_padding"
-                    android:text="123456"
                     tools:ignore="Autofill" />
 
+                <!--                android:text="123456"-->
                 <!--                android:text="pspihp"-->
 
                 <ImageView
@@ -122,16 +122,6 @@
                     android:src="@drawable/img_password"
                     tools:ignore="ContentDescription" />
             </LinearLayout>
-
-            <ImageView
-                android:id="@+id/imageViewLogo"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/_100sdp"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="@dimen/_10sdp"
-                android:layout_marginBottom="@dimen/_10sdp"
-                android:src="@drawable/img_bg_logo"
-                tools:ignore="ContentDescription" />
 
             <Button
                 android:id="@+id/buttonLogin"
@@ -145,6 +135,17 @@
                 android:textColor="@color/text_color1"
                 android:textSize="@dimen/textSizeLarge"
                 android:textStyle="bold" />
+
+            <ImageView
+                android:id="@+id/imageViewLogo"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_100sdp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:layout_marginBottom="@dimen/_10sdp"
+                android:src="@drawable/img_bg_logo"
+                tools:ignore="ContentDescription" />
+
         </LinearLayout>
 
         <LinearLayout
