--- a/app/src/main/res/layout/document_form_activity.xml
+++ b/app/src/main/res/layout/document_form_activity.xml
@@ -43,12 +43,13 @@
             android:textSize="@dimen/textSizeMedium" />
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_gravity="center"
             android:layout_weight="1"
             android:background="@drawable/border_gray_2"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:weightSum="2">
 
             <ImageView
                 android:id="@+id/image_view"
@@ -59,76 +60,79 @@
                 android:src="@drawable/icon_finder_camera"
                 tools:ignore="ContentDescription,NestedWeights" />
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginLeft="@dimen/activity_large_margin"
-                android:layout_marginRight="@dimen/activity_large_margin"
-                android:orientation="vertical">
+            <ScrollView
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1">
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:background="@drawable/border_white_1"
-                    android:orientation="vertical"
-                    android:padding="@dimen/activity_mid_padding">
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="@dimen/activity_medium_margin"
+                    android:layout_marginRight="@dimen/activity_medium_margin"
+                    android:orientation="vertical">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/border_white_1"
+                        android:orientation="vertical"
+                        android:padding="@dimen/activity_mid_padding">
+
+                        <Button
+                            android:id="@+id/button_pick"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_marginBottom="@dimen/activity_mid_margin"
+                            android:background="@drawable/border_blue_1"
+                            android:paddingLeft="@dimen/activity_mid_padding"
+                            android:paddingRight="@dimen/activity_mid_padding"
+                            android:text="@string/pick_an_image"
+                            android:textColor="@color/white"
+                            android:textSize="@dimen/textSizeMedium"
+                            tools:ignore="MissingConstraints" />
+
+                        <Spinner
+                            android:id="@+id/spinnerTitle"
+                            style="@style/Widget.AppCompat.Spinner.DropDown"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_marginTop="@dimen/activity_mid_margin"
+                            android:layout_marginBottom="@dimen/activity_mid_margin"
+                            android:paddingLeft="@dimen/activity_large_padding"
+                            android:paddingRight="@dimen/activity_large_padding"
+                            android:spinnerMode="dialog" />
+
+                        <Button
+                            android:id="@+id/button_upload"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_marginTop="@dimen/activity_mid_margin"
+                            android:background="@drawable/border_green_2"
+                            android:text="@string/upload_image"
+                            android:textColor="@color/white"
+                            android:textSize="@dimen/textSizeMedium"
+                            android:visibility="gone"
+                            tools:ignore="MissingConstraints" />
+                    </LinearLayout>
 
                     <Button
-                        android:id="@+id/button_pick"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_marginBottom="@dimen/activity_mid_margin"
-                        android:background="@drawable/border_blue_1"
-                        android:paddingLeft="@dimen/activity_large_padding"
-                        android:paddingRight="@dimen/activity_large_padding"
-                        android:text="@string/pick_an_image"
-                        android:textColor="@color/white"
-                        android:textSize="@dimen/textSizeMedium"
-                        tools:ignore="MissingConstraints" />
-
-                    <Spinner
-                        android:id="@+id/spinnerTitle"
-                        style="@style/Widget.AppCompat.Spinner.DropDown"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:spinnerMode="dialog"
-                        android:layout_marginTop="@dimen/activity_mid_margin"
-                        android:layout_marginBottom="@dimen/activity_mid_margin"
-                        android:paddingLeft="@dimen/activity_large_padding"
-                        android:paddingRight="@dimen/activity_large_padding" />
-
-                    <Button
-                        android:id="@+id/button_upload"
+                        android:id="@+id/button_accepted"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:layout_marginTop="@dimen/activity_mid_margin"
-                        android:background="@drawable/border_green_2"
-                        android:text="@string/upload_image"
+                        android:layout_marginBottom="@dimen/activity_mid_margin"
+                        android:background="@drawable/border_orange_2"
+                        android:text="@string/final_accepted"
                         android:textColor="@color/white"
                         android:textSize="@dimen/textSizeMedium"
-                        android:visibility="gone"
                         tools:ignore="MissingConstraints" />
                 </LinearLayout>
-
-                <Button
-                    android:id="@+id/button_accepted"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="@dimen/activity_mid_margin"
-                    android:layout_marginBottom="@dimen/activity_mid_margin"
-                    android:background="@drawable/border_orange_2"
-                    android:text="@string/final_accepted"
-                    android:textColor="@color/white"
-                    android:textSize="@dimen/textSizeMedium"
-                    tools:ignore="MissingConstraints" />
-            </LinearLayout>
+            </ScrollView>
         </LinearLayout>
-
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
